--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,36 +6,26 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="#1b212c"
-tmux_thm_black="#141820"
-tmux_thm_gray="#3b4261"
-tmux_thm_active_fg="#34febb"
-tmux_thm_active_bg="#1F3A37"
-tmux_thm_inactive_fg="#82aaff"
-tmux_thm_inactive_bg="#262D41"
-tmux_thm_session_fg="#ffbf7a"
-tmux_thm_session_bg="#38312E"
-tmux_thm_dir_fg="#c792ea"
-tmux_thm_dir_bg="#2F2A3D"
-tmux_thm_time_fg="#4ff2f8"
-tmux_thm_time_bg="#1F3940"
+# tmux_thm_fg="#a8b5d1"
+# tmux_thm_bg="#24283B"
+# tmux_thm_black="#1b212c"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_active="#34febb"
+# tmux_thm_inactive="#82aaff"
+# tmux_thm_session="#ffbf7a"
+# tmux_thm_dir="#c792ea"
+# tmux_thm_time="#4ff2f8"
 
-# early-riser theme
-# tmux_thm_fg="#424c57"
-# tmux_thm_bg="#f7fafc"
-# tmux_thm_black="#d4dbe3"
-# tmux_thm_gray="#a8b3bd"
-# tmux_thm_active_fg="#10b981"
-# tmux_thm_active_bg="#bee9dd"
-# tmux_thm_inactive_fg="#2563eb"
-# tmux_thm_inactive_bg="#c3d4f8"
-# tmux_thm_session_fg="#ea580c"
-# tmux_thm_session_bg="#f4d2c0"
-# tmux_thm_dir_fg="#7c3aed"
-# tmux_thm_dir_bg="#d9caf8"
-# tmux_thm_time_fg="#06b6d4"
-# tmux_thm_time_bg="#bce9f2"
+# catppuccin theme
+tmux_thm_fg="#cad3f5"
+tmux_thm_bg="#24273a"
+tmux_thm_black="#181926"
+tmux_thm_gray="#363a4f"
+tmux_thm_active="#8bd5ca"
+tmux_thm_inactive="#b7bdf8"
+tmux_thm_session="#f0c6c6"
+tmux_thm_time="#91d7e3"
+tmux_thm_dir="#f4dbd6"
 
 # status
 set -gq status "on"
@@ -51,7 +41,7 @@ set -gq message-command-style "fg=${tmux_thm_session_fg},bg=${tmux_thm_gray},ali
 
 # panes
 set -gq pane-border-style "fg=${tmux_thm_gray}"
-set -gq pane-active-border-style "fg=${tmux_thm_inactive_fg}"
+set -gq pane-active-border-style "fg=${tmux_thm_inactive}"
 
 # windows
 setw -gq window-status-activity-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
@@ -61,19 +51,19 @@ setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 # --------=== Statusline
 
 # current session name
-session_column="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_session_bg]  #S "
+session_column="#[fg=$tmux_thm_session,bg=$tmux_thm_bg]  #S "
 
 # time
-time_column="#[fg=$tmux_thm_time_fg,bg=$tmux_thm_time_bg]  %R "
+time_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_time]  %R "
 
 # current directory name
-current_dir_column="#[fg=$tmux_thm_dir_fg,bg=$tmux_thm_dir_bg]  #{b:pane_current_path} "
+current_dir_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_dir]  #{b:pane_current_path} "
 
 # inactive window
-window_status_format="#[fg=$tmux_thm_inactive_fg,bg=$tmux_thm_inactive_bg] #I #W "
+window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive] #I #W "
 
 # active window
-window_status_current_format="#[fg=$tmux_thm_active_fg,bg=$tmux_thm_active_bg] #I #W "
+window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active] #I #W "
 
 # Set the status items.
 # left side gets the session name plus a list of windows.
