--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ tmux_thm_bg="#24273a"
 tmux_thm_black="#181926"
 tmux_thm_gray="#363a4f"
 tmux_thm_active="#8bd5ca"
-tmux_thm_inactive="#b7bdf8"
+tmux_thm_inactive="#8087a2"
 tmux_thm_session="#f0c6c6"
 tmux_thm_time="#91d7e3"
 tmux_thm_dir="#f4dbd6"
@@ -60,10 +60,10 @@ time_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_time]  %R "
 current_dir_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_dir]  #{b:pane_current_path} "
 
 # inactive window
-window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive] #I #W "
+window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive] [#I] #W "
 
 # active window
-window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active] #I #W "
+window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active] [#I] #W "
 
 # Set the status items.
 # left side gets the session name plus a list of windows.
