--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -37,8 +37,8 @@ format = "[$path ]($style)[$read_only]($read_only_style)"
 # show the time in the prompt
 [time]
 disabled = false
-# style = "bright-black" # use with all other themes
-style = "#b7bdf8 dimmed"
+style = "bright-black" # use with all other themes
+# style = "#b7bdf8 dimmed"
 time_format = "[%T]"
 format = "[$time]($style) "
 
@@ -49,7 +49,8 @@ symbol = ""
 format = '[$symbol $branch]($style) '
 
 [git_status]
-style = "#f4dbd6"
+# style = "#f4dbd6"
+style = "yellow"
 deleted = "×"
 
 # remove bold styling from language prompts
