--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,26 +6,26 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-# tmux_thm_fg="#a8b5d1"
-# tmux_thm_bg="#24283B"
-# tmux_thm_black="#1b212c"
-# tmux_thm_gray="#3b4261"
-# tmux_thm_active="#34febb"
-# tmux_thm_inactive="#82aaff"
-# tmux_thm_session="#ffbf7a"
-# tmux_thm_dir="#c792ea"
-# tmux_thm_time="#4ff2f8"
+tmux_thm_fg="#a8b5d1"
+tmux_thm_bg="#24283B"
+tmux_thm_black="#1b212c"
+tmux_thm_gray="#3b4261"
+tmux_thm_active="#34febb"
+tmux_thm_inactive="#82aaff"
+tmux_thm_session="#ffbf7a"
+tmux_thm_dir="#c792ea"
+tmux_thm_time="#4ff2f8"
 
 # catppuccin theme
-tmux_thm_fg="#cad3f5"
-tmux_thm_bg="#24273a"
-tmux_thm_black="#181926"
-tmux_thm_gray="#363a4f"
-tmux_thm_active="#8bd5ca"
-tmux_thm_inactive="#8087a2"
-tmux_thm_session="#f0c6c6"
-tmux_thm_time="#91d7e3"
-tmux_thm_dir="#f4dbd6"
+# tmux_thm_fg="#cad3f5"
+# tmux_thm_bg="#24273a"
+# tmux_thm_black="#181926"
+# tmux_thm_gray="#363a4f"
+# tmux_thm_active="#8bd5ca"
+# tmux_thm_inactive="#8087a2"
+# tmux_thm_session="#f0c6c6"
+# tmux_thm_time="#91d7e3"
+# tmux_thm_dir="#f4dbd6"
 
 # status
 set -gq status "on"
