--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,8 +1,4 @@
-# disable the newline at the start of the prompt
 add_newline = false
-
-# $time\ was originally at the beginning, but dropping it for extra space
-# add/remove $line_break\ before $character\ to get prompt character on same line as prompt
 
 format = """\
   $directory\
@@ -37,20 +33,17 @@ format = "[$path ]($style)[$read_only]($read_only_style)"
 # show the time in the prompt
 [time]
 disabled = false
-style = "bright-black" # use with all other themes
-# style = "#b7bdf8 dimmed"
+style = "bright-black"
 time_format = "[%T]"
 format = "[$time]($style) "
 
 [git_branch]
 style = "purple"
-# symbol = "git"
 symbol = ""
 format = '[$symbol $branch]($style) '
 
 [git_status]
-# style = "#f4dbd6"
-style = "yellow"
+style = "bright-yellow"
 deleted = "×"
 
 # remove bold styling from language prompts
