--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,17 +15,30 @@ tmux_thm_inactive="#82aaff"
 tmux_thm_session="#ffbf7a"
 tmux_thm_dir="#c792ea"
 tmux_thm_time="#4ff2f8"
+tmux_thm_message="#34febb"
 
-# catppuccin theme
+# # catppuccin macchiato theme
 # tmux_thm_fg="#cad3f5"
 # tmux_thm_bg="#24273a"
 # tmux_thm_black="#181926"
 # tmux_thm_gray="#363a4f"
 # tmux_thm_active="#8bd5ca"
-# tmux_thm_inactive="#8087a2"
+# tmux_thm_inactive="#939ab7"
 # tmux_thm_session="#f0c6c6"
 # tmux_thm_time="#91d7e3"
 # tmux_thm_dir="#f4dbd6"
+# tmux_thm_message="#34febb"
+
+# tokyonight
+# tmux_thm_fg="#c0caf5"
+# tmux_thm_bg="#24283B"
+# tmux_thm_black="#1a1b26"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_time="#1abc9c"
+# tmux_thm_inactive="#7aa2f7"
+# tmux_thm_dir="#bb9af7"
+# tmux_thm_active="#73daca"
+# tmux_thm_session="#ffbf7a"
 
 # status
 set -gq status "on"
@@ -36,8 +49,8 @@ set -gq status-right-length "100"
 set -gq status-position bottom
 
 # messages
-set -gq message-style "fg=${tmux_thm_session_fg},bg=${tmux_thm_gray},align=centre"
-set -gq message-command-style "fg=${tmux_thm_session_fg},bg=${tmux_thm_gray},align=centre"
+set -gq message-style "fg=${tmux_thm_bg},bg=${tmux_thm_message},align=centre"
+set -gq message-command-style "fg=${tmux_thm_bg},bg=${tmux_thm_message},align=centre"
 
 # panes
 set -gq pane-border-style "fg=${tmux_thm_gray}"
@@ -51,25 +64,25 @@ setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 # --------=== Statusline
 
 # current session name
-session_column="#[fg=$tmux_thm_session,bg=$tmux_thm_bg]  #S "
+session_column="#[fg=$tmux_thm_session,bg=$tmux_thm_bg] #S "
 
 # time
-time_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_time]  %R "
+time_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_time] %R"
 
 # current directory name
-current_dir_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_dir]  #{b:pane_current_path} "
+current_dir_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_dir]  #{b:pane_current_path} "
 
 # inactive window
-window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive] [#I] #W "
+window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive][#I] #W "
 
 # active window
-window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active] [#I] #W "
+window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active][#I] #W "
 
 # Set the status items.
 # left side gets the session name plus a list of windows.
 # right side gets the current time and current directory.
 set -gq status-left "${session_column}"
-set -gq status-right "${current_dir_column}${time_column}"
+set -gq status-right "${current_dir_column} ${time_column}"
 setw -gq window-status-format "${window_status_format}"
 setw -gq window-status-current-format "${window_status_current_format}"
 
