add background colors back to tmux status line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,12 +10,17 @@ tmux_thm_fg="#a8b5d1"
 tmux_thm_bg="#24283B"
 tmux_thm_black="#1b212c"
 tmux_thm_gray="#3b4261"
-tmux_thm_active="#34febb"
-tmux_thm_inactive="#82aaff"
-tmux_thm_session="#ffbf7a"
-tmux_thm_dir="#c792ea"
-tmux_thm_time="#4ff2f8"
 tmux_thm_message="#34febb"
+tmux_thm_active_fg="#34febb"
+tmux_thm_active_bg="#1F3A37"
+tmux_thm_inactive_fg="#82aaff"
+tmux_thm_inactive_bg="#262D41"
+tmux_thm_session_fg="#ffbf7a"
+tmux_thm_session_bg="#38312E"
+tmux_thm_dir_fg="#c792ea"
+tmux_thm_dir_bg="#2F2A3D"
+tmux_thm_time_fg="#4ff2f8"
+tmux_thm_time_bg="#1F3940"
 
 # status
 set -gq status "on"
@@ -41,19 +46,19 @@ setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 # --------=== Statusline
 
 # current session name
-session_column="#[fg=$tmux_thm_session,bg=$tmux_thm_bg] #S "
+session_column="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_session_bg] #S "
 
 # time
-time_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_time] %R"
+time_column="#[bg=$tmux_thm_time_bg,fg=$tmux_thm_time_fg] %R"
 
 # current directory name
-current_dir_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_dir]  #{b:pane_current_path} "
+current_dir_column="#[bg=$tmux_thm_dir_bg,fg=$tmux_thm_dir_fg]  #{b:pane_current_path} "
 
 # inactive window
-window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive][#I] #W "
+window_status_format="#[bg=$tmux_thm_inactive_bg,fg=$tmux_thm_inactive_fg][#I] #W "
 
 # active window
-window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active][#I] #W "
+window_status_current_format="#[bg=$tmux_thm_active_bg,fg=$tmux_thm_active_fg][#I] #W "
 
 # Set the status items.
 # left side gets the session name plus a list of windows.
