--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,21 +6,27 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="#24283B"
-tmux_thm_black="#1b212c"
-tmux_thm_gray="#3b4261"
-tmux_thm_message="#34febb"
-tmux_thm_active_fg="#34febb"
-tmux_thm_active_bg="#1F3A37"
-tmux_thm_inactive_fg="#82aaff"
-tmux_thm_inactive_bg="#262D41"
-tmux_thm_session_fg="#ffbf7a"
-tmux_thm_session_bg="#38312E"
-tmux_thm_dir_fg="#c792ea"
-tmux_thm_dir_bg="#2F2A3D"
-tmux_thm_time_fg="#4ff2f8"
-tmux_thm_time_bg="#1F3940"
+# tmux_thm_fg="#a8b5d1"
+# tmux_thm_bg="#24283B"
+# tmux_thm_black="#1b212c"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_active="#34febb"
+# tmux_thm_inactive="#82aaff"
+# tmux_thm_session="#ffbf7a"
+# tmux_thm_dir="#c792ea"
+# tmux_thm_time="#4ff2f8"
+# tmux_thm_message="#34febb"
+
+# everforest
+tmux_thm_fg="#d3c6aa"
+tmux_thm_bg="#272e33"
+tmux_thm_black="#272e33"
+tmux_thm_gray="#7a8478"
+tmux_thm_session="#e69875"
+tmux_thm_inactive="#a6b0a0"
+tmux_thm_active="#a7c080"
+tmux_thm_dir="#d699b6"
+tmux_thm_time="#7fbbb3"
 
 # status
 set -gq status "on"
@@ -46,19 +52,19 @@ setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 # --------=== Statusline
 
 # current session name
-session_column="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_session_bg] #S "
+session_column="#[fg=$tmux_thm_session,bg=$tmux_thm_bg] #S "
 
 # time
-time_column="#[bg=$tmux_thm_time_bg,fg=$tmux_thm_time_fg] %R"
+time_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_time] %R"
 
 # current directory name
-current_dir_column="#[bg=$tmux_thm_dir_bg,fg=$tmux_thm_dir_fg]  #{b:pane_current_path} "
+current_dir_column="#[bg=$tmux_thm_bg,fg=$tmux_thm_dir]  #{b:pane_current_path} "
 
 # inactive window
-window_status_format="#[bg=$tmux_thm_inactive_bg,fg=$tmux_thm_inactive_fg][#I] #W "
+window_status_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_inactive][#I] #W "
 
 # active window
-window_status_current_format="#[bg=$tmux_thm_active_bg,fg=$tmux_thm_active_fg][#I] #W "
+window_status_current_format="#[bg=$tmux_thm_bg,fg=$tmux_thm_active][#I] #W "
 
 # Set the status items.
 # left side gets the session name plus a list of windows.
