--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -14,6 +14,10 @@
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "buffer_font_family": "JetBrains Mono",
+  "buffer_font_features": {
+    // Disable ligatures:
+    "calt": false
+  },
   "ui_font_family": ".SystemUIFont",
   "theme": {
     "mode": "dark", // dark, light, or system
