--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,27 +6,28 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="#24283B"
-tmux_thm_black="#1b212c"
-tmux_thm_gray="#3b4261"
-tmux_thm_active="#34febb"
-tmux_thm_inactive="#82aaff"
-tmux_thm_session="#ffbf7a"
-tmux_thm_dir="#c792ea"
-tmux_thm_time="#4ff2f8"
-tmux_thm_message="#34febb"
+# tmux_thm_fg="#a8b5d1"
+# tmux_thm_bg="#24283B"
+# tmux_thm_black="#1b212c"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_active="#34febb"
+# tmux_thm_inactive="#82aaff"
+# tmux_thm_session="#ffbf7a"
+# tmux_thm_dir="#c792ea"
+# tmux_thm_time="#4ff2f8"
+# tmux_thm_message="#34febb"
 
-# everforest
-# tmux_thm_fg="#d3c6aa"
-# tmux_thm_bg="#272e33"
-# tmux_thm_black="#272e33"
-# tmux_thm_gray="#7a8478"
-# tmux_thm_session="#e69875"
-# tmux_thm_inactive="#a6b0a0"
-# tmux_thm_active="#a7c080"
-# tmux_thm_dir="#d699b6"
-# tmux_thm_time="#7fbbb3"
+# catppuccin macchiato theme
+tmux_thm_fg="#cad3f5"
+tmux_thm_bg="#24273a"
+tmux_thm_black="#181926"
+tmux_thm_gray="#363a4f"
+tmux_thm_active="#8bd5ca"
+tmux_thm_inactive="#939ab7"
+tmux_thm_session="#f0c6c6"
+tmux_thm_time="#91d7e3"
+tmux_thm_dir="#f4dbd6"
+tmux_thm_message="#34febb"
 
 # tokyonight
 # tmux_thm_fg="#c0caf5"
