--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -4,7 +4,8 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
---theme="base16"
+--theme="Catppuccin Macchiato"
+# --theme="base16"
 
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
