--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,16 +18,16 @@ set -s escape-time 0
 # tmux_thm_message="#34febb"
 
 # catppuccin macchiato theme
-tmux_thm_fg="#cad3f5"
-tmux_thm_bg="#24273a"
-tmux_thm_black="#181926"
-tmux_thm_gray="#363a4f"
-tmux_thm_active="#8bd5ca"
-tmux_thm_inactive="#939ab7"
-tmux_thm_session="#f0c6c6"
-tmux_thm_time="#91d7e3"
-tmux_thm_dir="#f4dbd6"
-tmux_thm_message="#34febb"
+# tmux_thm_fg="#cad3f5"
+# tmux_thm_bg="#24273a"
+# tmux_thm_black="#181926"
+# tmux_thm_gray="#363a4f"
+# tmux_thm_active="#8bd5ca"
+# tmux_thm_inactive="#939ab7"
+# tmux_thm_session="#f0c6c6"
+# tmux_thm_time="#91d7e3"
+# tmux_thm_dir="#f4dbd6"
+# tmux_thm_message="#34febb"
 
 # tokyonight
 # tmux_thm_fg="#c0caf5"
@@ -39,6 +39,18 @@ tmux_thm_message="#34febb"
 # tmux_thm_dir="#bb9af7"
 # tmux_thm_active="#73daca"
 # tmux_thm_session="#ffbf7a"
+
+# gruvbox material theme
+tmux_thm_fg="#d4be98"
+tmux_thm_bg="#282828"
+tmux_thm_black="#1d2021"
+tmux_thm_gray="#504945"
+tmux_thm_session="#d8a657"
+tmux_thm_inactive="#a89984"
+tmux_thm_active="#89b482"
+tmux_thm_dir="#d3869b"
+tmux_thm_time="#689d6a"
+tmux_thm_message="#a9b665"
 
 # status
 set -gq status "on"
