--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -33,8 +33,7 @@ format = "[$path ]($style)[$read_only]($read_only_style)"
 # show the time in the prompt
 [time]
 disabled = false
-# style = "bright-black" # use with all other themes
-style = "#b7bdf8 dimmed"
+style = "bright-black" # use with all other themes
 time_format = "[%T]"
 format = "[$time]($style) "
 
