--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -19,79 +19,41 @@ window-width = 140
 
 # COLORS
 
-# theme = tokyonight-storm
-# palette = 8=#506686
-
-# theme = catppuccin-macchiato
-# cursor-color = #b7bdf8
-# # overwrite purple
-# palette = 5=#c6a0f6
-# palette = 13=#c6a0f6
-# # overwrite yellow
-# palette = 3=#f0c6c6
-# palette = 11=#f0c6c6
-
-
 # electron highlighter
-# background = #24283b
-# foreground = #a8b5d1
-# selection-background = #283457
-# selection-foreground = #a8b5d1
-# cursor-color = #a8b5d1
-# cursor-text = #1a1b26
-#
-# # black
-# palette = 0=#15161e
-# palette = 8=#506686
-# # red
-# palette = 1=#f7768e
-# palette = 9=#f7768e
-# # green
-# palette = 2=#34febb
-# palette = 10=#34febb
-# # yellow
-# palette = 3=#ffbf7a
-# palette = 11=#ffbf7a
-# # blue
-# palette = 4=#82aaff
-# palette = 12=#82aaff
-# # purple
-# palette = 5=#c792ea
-# palette = 13=#c792ea
-# # aqua
-# palette = 6=#4ff2f8
-# palette = 14=#4ff2f8
-# # white
-# palette = 7=#7c8eac
-# palette = 15=#c5cee0
-# # extra
-# palette = 16=#ffbf7a
-# palette = 17=#ff5874
+background = #24283b
+foreground = #a8b5d1
+selection-background = #283457
+selection-foreground = #a8b5d1
+cursor-color = #a8b5d1
+cursor-text = #1a1b26
 
-# gruvbox-material
-background = #282828
-foreground = #d4be98
-selection-background = #d4be98
-selection-foreground = #1d2021
-cursor-color = #a89984
-cursor-text = #1d2021
-
-palette = 0=#665c54
-palette = 1=#ea6962
-palette = 2=#a9b665
-palette = 3=#d8a657
-palette = 4=#7daea3
-palette = 5=#d3869b
-palette = 6=#89b482
-palette = 7=#d4be98
-palette = 8=#928374
-palette = 9=#ea6962
-palette = 10=#a9b665
-palette = 11=#d8a657
-palette = 12=#7daea3
-palette = 13=#d3869b
-palette = 14=#89b482
-palette = 15=#d4be98
+# black
+palette = 0=#15161e
+palette = 8=#506686
+# red
+palette = 1=#f7768e
+palette = 9=#f7768e
+# green
+palette = 2=#34febb
+palette = 10=#34febb
+# yellow
+palette = 3=#ffbf7a
+palette = 11=#ffbf7a
+# blue
+palette = 4=#82aaff
+palette = 12=#82aaff
+# purple
+palette = 5=#c792ea
+palette = 13=#c792ea
+# aqua
+palette = 6=#4ff2f8
+palette = 14=#4ff2f8
+# white
+palette = 7=#7c8eac
+palette = 15=#c5cee0
+# extra
+palette = 16=#ffbf7a
+palette = 17=#ff5874
 
 # CURSOR
 cursor-style = block
