--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,14 +10,14 @@ tmux_thm_fg="#a8b5d1"
 tmux_thm_bg="#24283B"
 tmux_thm_black="#1b212c"
 tmux_thm_gray="#3b4261"
-tmux_thm_active="#34febb"
+tmux_thm_active="#58ffc7"
 tmux_thm_inactive="#82aaff"
-tmux_thm_session="#ffbf7a"
-tmux_thm_dir="#c792ea"
-tmux_thm_time="#4ff2f8"
+tmux_thm_session="#ffd9af"
+tmux_thm_dir="#d2a6ef"
+tmux_thm_time="#57f9ff"
 tmux_thm_message="#34febb"
 
-# status
+# statu:
 set -gq status "on"
 set -gq status-bg "${tmux_thm_bg}"
 set -gq status-justify "left"
