--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,16 +6,28 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="#24283B"
-tmux_thm_black="#1b212c"
-tmux_thm_gray="#3b4261"
-tmux_thm_active="#58ffc7"
-tmux_thm_inactive="#82aaff"
-tmux_thm_session="#ffd9af"
-tmux_thm_dir="#d2a6ef"
-tmux_thm_time="#57f9ff"
-tmux_thm_message="#34febb"
+# tmux_thm_fg="#a8b5d1"
+# tmux_thm_bg="#24283B"
+# tmux_thm_black="#1b212c"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_active="#58ffc7"
+# tmux_thm_inactive="#82aaff"
+# tmux_thm_session="#ffd9af"
+# tmux_thm_dir="#d2a6ef"
+# tmux_thm_time="#57f9ff"
+# tmux_thm_message="#34febb"
+
+# everforest
+tmux_thm_fg="#d3c6aa"
+tmux_thm_bg="#272e33"
+tmux_thm_black="#272e33"
+tmux_thm_gray="#7a8478"
+tmux_thm_active="#a7c080"
+tmux_thm_inactive="#a6b0a0"
+tmux_thm_session="#e69875"
+tmux_thm_dir="#d699b6"
+tmux_thm_time="#7fbbb3"
+tmux_thm_message="#a7c080"
 
 # statu:
 set -gq status "on"
