--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -7,6 +7,9 @@
 // custom settings, run `zed: open default settings` from the
 // command palette
 {
+  "git_panel": {
+    "dock": "right"
+  },
   "project_panel": {
     "dock": "left"
   },
@@ -21,7 +24,7 @@
   "ui_font_family": ".SystemUIFont",
   "theme": {
     "mode": "dark", // dark, light, or system
-    "dark": "One Dark",
+    "dark": "Everforest Dark",
     "light": "Catppuccin Latte - No Italics"
   },
   "cursor_blink": false,
