--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,30 +6,42 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-# tmux_thm_fg="#a8b5d1"
-# tmux_thm_bg="#24283B"
-# tmux_thm_black="#1b212c"
-# tmux_thm_gray="#3b4261"
-# tmux_thm_active="#58ffc7"
-# tmux_thm_inactive="#82aaff"
-# tmux_thm_session="#ffd9af"
-# tmux_thm_dir="#d2a6ef"
-# tmux_thm_time="#57f9ff"
-# tmux_thm_message="#34febb"
+tmux_thm_fg="#a8b5d1"
+tmux_thm_bg="#24283B"
+tmux_thm_black="#1b212c"
+tmux_thm_gray="#3b4261"
+tmux_thm_active="#58ffc7"
+tmux_thm_inactive="#82aaff"
+tmux_thm_session="#ffd9af"
+tmux_thm_dir="#d2a6ef"
+tmux_thm_time="#57f9ff"
+tmux_thm_message="#34febb"
 
 # everforest
-tmux_thm_fg="#d3c6aa"
-tmux_thm_bg="#272e33"
-tmux_thm_black="#272e33"
-tmux_thm_gray="#7a8478"
-tmux_thm_active="#a7c080"
-tmux_thm_inactive="#a6b0a0"
-tmux_thm_session="#e69875"
-tmux_thm_dir="#d699b6"
-tmux_thm_time="#7fbbb3"
-tmux_thm_message="#a7c080"
+# tmux_thm_fg="#d3c6aa"
+# tmux_thm_bg="#272e33"
+# tmux_thm_black="#272e33"
+# tmux_thm_gray="#7a8478"
+# tmux_thm_active="#a7c080"
+# tmux_thm_inactive="#a6b0a0"
+# tmux_thm_session="#e69875"
+# tmux_thm_dir="#d699b6"
+# tmux_thm_time="#7fbbb3"
+# tmux_thm_message="#a7c080"
 
-# statu:
+# gruvbox material theme
+# tmux_thm_fg="#d4be98"
+# tmux_thm_bg="#282828"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_session="#d8a657"
+# tmux_thm_inactive="#a89984"
+# tmux_thm_active="#89b482"
+# tmux_thm_dir="#d3869b"
+# tmux_thm_time="#689d6a"
+# tmux_thm_message="#a9b665"
+
+# status
 set -gq status "on"
 set -gq status-bg "${tmux_thm_bg}"
 set -gq status-justify "left"
