--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -151,7 +151,10 @@ bind-key & kill-window
 bind-key x kill-pane
 
 # forget the find window. That is for chumps
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+# bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r o display-popup -E -w 60% "sesh connect \"$(
+ sesh list -t -i | gum filter --limit 1 --no-strip-ansi --no-sort --fuzzy --placeholder='' --height 50 --prompt='> '
+)\""
 
 # run tmux-sessionx even faster with just ctrl-g
 bind-key -r g run-shell "~/.tmux/plugins/tmux-sessionx/scripts/sessionx.sh"
@@ -166,13 +169,13 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'omerxx/tmux-sessionx'
+# set -g @plugin 'omerxx/tmux-sessionx'
 
 # plugin configs
 set -g @continuum-restore 'on' # tell continuum to restore previous session.
-set -g @sessionx-bind 'o' # run tmux-sessionx on prefix-o
-set -g @sessionx-zoxide-mode 'on'
-set -g @sessionx-filter-current 'false'
+# set -g @sessionx-bind 'o' # run tmux-sessionx on prefix-o
+# set -g @sessionx-zoxide-mode 'on'
+# set -g @sessionx-filter-current 'false'
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
