--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -24,7 +24,7 @@
   "ui_font_family": ".SystemUIFont",
   "theme": {
     "mode": "dark", // dark, light, or system
-    "dark": "Electron Highlighter",
+    "dark": "Catppuccin Latte",
     "light": "Catppuccin Latte - No Italics"
   },
   "cursor_blink": false,
